<resources>
    <string name="guess_number">Guess number</string>
    <string name="name">Name</string>
    <string name="reset">RESET</string>
    <string name="guess">GUESS</string>
    <string name="textview">TextView</string>
    <string name="app_name">Paper Scissors Rock</string>
    <string name="play_choose_a_button">Play choose a button</string>
    <string name="paper">Paper</string>
    <string name="rock">Rock</string>
    <string name="scissors">Scissors</string>
    <string name="wait_player">Wait player</string>
    <string name="player">Player</string>
    <string name="computer">Computer</string>
    <string name="rock_paper_scissors">Rock paper scissors</string>
    <string name="win">You win!!!!!</string>
    <string name="lose">You lose!!!!!</string>
    <string name="draw">Draw!!!!!</string>
</resources>